# redirect-resolver

./: .pre-commit-config.yaml  pyproject.toml  redirected_company_domain_list.csv
redirect_resolver/: resolver.py
tests/: test_resolver.py
