[tool.poetry]
name = "poetry-template"
version = "0.1.0"
description = "A CLI to resolve HTTP(S) redirects."
authors = ["edkrueger <edkrueger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
